--- a/css/style.css
+++ b/css/style.css
@@ -449,6 +449,7 @@ body {
     z-index: 1;
     background: linear-gradient(to top, rgb(244, 243, 241) 50%, rgb(255, 255, 255) 100%);
     margin: 0 2px 18px;
+    border-radius: 5px;
 }
 
 .aside-block__selector {
@@ -643,7 +644,7 @@ body {
     border: 1px solid #867b6b;
     padding-left: 15px;
     font-family: inherit;
-
+    font-size: 11px;
     color: #fff;
     text-transform: uppercase;
     text-shadow: 0px -2px 0px #675d49;
