--- a/css/style.css
+++ b/css/style.css
@@ -461,6 +461,7 @@ body {
     padding-left: 8px;
     height: 25px;
     border: 1px solid #cfcdc5;
+    border-radius: 5px;
     box-shadow: 0 0 0 3px #e8e5de;
     position: relative;
     z-index: 2;
