--- a/css/media.css
+++ b/css/media.css
@@ -136,7 +136,7 @@
         margin: 20px;
     }
 
-    #burger__checkbox:checked ~ ul{
+    #burger-menu-checkbox:checked ~ ul{
         max-width: 320px;
         max-height: 500px;
         font-size: 1rem;
