--- a/css/style.css
+++ b/css/style.css
@@ -73,10 +73,54 @@ body {
     padding-left: 20px;
 }
 
-#burger__checkbox {
+.nav-icon{
+    width: 35px;
+    height: 30px;
+    margin: 10px 10px;
+    position: relative;
+    cursor: pointer;
+    display: inline-block;
+  }
+.nav-icon span{
+    background-color:#fff;
+    position: absolute;
+    border-radius: 2px;
+    transition: .3s cubic-bezier(.8, .5, .2, 1.4);
+    width:100%;
+    height: 4px;
+  }
+  .nav-icon span:nth-child(1){
+    top:0px;
+    left: 0px;
+  }
+  .nav-icon span:nth-child(2){
+    top:13px;
+    left: 0px;
+  }
+  .nav-icon span:nth-child(3){
+    bottom:0px;
+    left: 0px;
+  }
+
+  #burger-menu-checkbox:checked ~ label .nav-icon span:nth-child(1){
+    transform: rotate(45deg) scaleX(0.7);
+    top: 13PX;
+    left: -8px;
+  }
+  #burger-menu-checkbox:checked ~ label .nav-icon span:nth-child(2){
+    transform: scale(0);
+    transition-duration: 50ms
+  }
+  #burger-menu-checkbox:checked ~ label .nav-icon span:nth-child(3){
+    transform: rotate(-45deg) scaleX(0.7);
+    top: 13PX;
+    left: 7px;
+  }
+
+
+#burger-menu-checkbox {
     display: none;
 }
-
 
 .logo__text--primary {
     font-family: "KlavikaMedium";
